--- a/scss/components/_loader.scss
+++ b/scss/components/_loader.scss
@@ -139,6 +139,7 @@
   display: flex;
   height: 114px;
   justify-content: center;
+  overflow: hidden;
   width: 100%;
 
   .chart-stroke-1 {
